# lrc-mcp

./: .env.example  .gitignore  README.md  bulletproof_lightroom_launcher.py  launch_lightroom_external.py  mcp.json  pyproject.toml  requirements.txt  start_server.py  test_package_imports.py  test_uvicorn.py
lrc_mcp/: __init__.py  http_server.py  lightroom.py  main.py  server.py  uvicorn_config.py
lrc_mcp.egg-info/: PKG-INFO  SOURCES.txt
lrc_mcp/adapters/: lightroom.py
lrc_mcp/api/: routes.py
lrc_mcp/infra/: http.py
lrc_mcp/services/: lrc_bridge.py
plugin/lrc-mcp.lrplugin/: CollectionCommands.lua  CollectionSetCommands.lua  CollectionUtils.lua  CommandHandlers.lua  Info.lua  Init.lua  Logger.lua  MCPBridge.lua  Menu.lua  MenuLoaded.lua  PhotoMetadataCommands.lua  TESTING.md  TestAssertions.lua  TestCommands.lua  TestRunner.lua  UtilityCommands.lua  Utils.lua  WriteLock.lua  config.lua
src/: README.md  requirements.txt  setup.py
src/lrc_mcp/: health.py  lightroom.py  main.py  notifications.py  resources.py  server.py  utils.py
src/lrc_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test-scripts/: enqueue_echo.py  test_command_queue.py
tests/: README.md  conftest.py  enqueue_echo.py  run_tests.py  test_command_queue.py  test_echo.py  tool_description_test.py
tests/functional/: test_check_command_status.py  test_collections.py  test_kill_lightroom.py  test_launch_restart.py  test_lightroom_dependency.py  test_lightroom_persistence.py  test_photo_metadata.py
tests/integration/: test_notifications.py  (+3 more)
(+16 files in other folders)
